MarkalarController ve  DropDownList Oluşturulması ve çalışılması

--- a/Mvc_AsatYemekhane/Views/Birimler/Kaydet.cshtml
+++ b/Mvc_AsatYemekhane/Views/Birimler/Kaydet.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Birim Ekleme</h2>
+<h2>Birim Kaydetme Sayfası </h2>
 
 <div class="container">
     @using (Html.BeginForm("Kaydet", "Birimler", FormMethod.Post))
