--- a/Mvc_AsatYemekhane/Views/Shared/_Layout.cshtml
+++ b/Mvc_AsatYemekhane/Views/Shared/_Layout.cshtml
@@ -32,14 +32,11 @@
                     </li>
 
                     <li class="nav-item">
-
                         <a class="nav-link  px-lg-4 @Html.ActivePage("Kategoriler","Index")" href="/Kategoriler/Index/">Kategoriler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-lg-4 @Html.ActivePage("Markalar","Index")" href="#">Markalar</a>
+                        <a class="nav-link px-lg-4 @Html.ActivePage("Markalar","Index")" href="/Markalar/Index/">Markalar</a>
                     </li>
-
-
                     <li class="nav-item">
                         <a class="nav-link px-lg-4 @Html.ActivePage("Birimler","Index")" href="/Birimler/Index/">Birimler</a>
                     </li>
@@ -57,7 +54,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container" style="margin-top:20px;">
+    <div class="container"  style="margin-top:20px;">
         <div class="row navbar-static-top">
             @RenderBody()
         </div>
