--- a/Mvc_AsatYemekhane/Views/Kategoriler/Ekle.cshtml
+++ b/Mvc_AsatYemekhane/Views/Kategoriler/Ekle.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Mvc_AsatYemekhane.Models.Entity.Kategoriler
 @{
     ViewBag.Title = "Ekle";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,13 +7,16 @@
 <h2>Kategori Ekleme</h2>
 <div class="container">
     <form action="/Kategoriler/Ekle2/">
+        @Html.ValidationSummary(false, null, new {@class="text-danger" })  @*Hataların özetini gösterir*@
         <div class="form-group">
             <label>Kategori</label>
             <input type="text" name="Kategori" class="form-control" />
+            @Html.ValidationMessageFor(x => x.Kategori,"",new {@class = "text-danger"})
         </div>
         <div class="form-group">
             <label>Açıklama</label>
             <textarea name="Aciklama" class="form-control"></textarea>
+            @Html.ValidationMessageFor(x => x.Aciklama,"",new {@class = "text-danger"})
         </div>
         <div class="form-group">
            <button class="btn btn-success">Kategori Ekle</button>
