--- a/Mvc_AsatYemekhane/Views/Shared/_Layout.cshtml
+++ b/Mvc_AsatYemekhane/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 
 
-    <title>ASP.NET MVC Stok Takip Otomasyonu</title>
+    <title>Asat Yemekhane Stok Takip Otomasyonu</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/css/styles.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Stok Takip Otomasyonu</a>
+            <a class="navbar-brand" href="#">Asat Yemekhane Stok Takibi</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
