--- a/Mvc_AsatYemekhane/Views/Markalar/Ekle.cshtml
+++ b/Mvc_AsatYemekhane/Views/Markalar/Ekle.cshtml
@@ -11,14 +11,17 @@
                 <div class="form-group">
                     @Html.LabelFor(x => x.Kategoriler.Kategori)
                     @Html.DropDownListFor(x=>x.KategoriID, (List<SelectListItem>)ViewBag.l,"-----Seçiniz-----",new { @class="form-control"  })
+              @Html.ValidationMessageFor(x=>x.KategoriID,"",new {@class="text-danger"})
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(x=> x.Marka)
                     @Html.TextBoxFor(x=>x.Marka, new {@class="form-control"})
+                @Html.ValidationMessageFor(x=>x.Marka,null,new {@class="text-danger"})
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(x=>x.Aciklama)
                     @Html.TextBoxFor(x=>x.Aciklama, new {@class="form-control" })
+                @Html.ValidationMessageFor(x=> x.Aciklama,null,new {@class="text-danger"})
                 </div>
                 <div>
                     <button class="btn btn-success">
